[project]
name = "googlecalenderagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth-oauthlib>=1.3.1",
    "langchain>=1.2.15",
    "langchain-google-community>=3.0.5",
    "langchain-google-genai>=4.2.2",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.14",
    "pytz>=2026.1.post1",
    "streamlit>=1.56.0",
    "tzdata>=2026.1",
]
